[package]
name = "TriLib_Spotify"
version = "0.1.0"
edition = "2024"

[dependencies]
librespot = { git = "https://github.com/VastieOfficial/librespot-dl" , tag = "7" }
log = "0.4"
env_logger = "0.9"  
tokio = "1.47.1"
axum = "0.8.4"
regex = "1.11.1"
serde = "1.0.219"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
serde_json = "1.0.142"
urlencoding = "2.1.3"
bytes = "1"
hyper = "1.6.0"
reqwest = "0.12.23"
futures-util = "0.3.31"
